<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="default_time" translatable="false">0:00</string>
    <string name="upper_folder" translatable="false">..</string>
    <string name="artist_time" translatable="false">%s • %s</string>
    <string name="app_name">Music Downloader</string>
    <string name="ads_loading">Ads loading…</string>
    <string name="splash_tagline">Your offline music player</string>
    <string name="home_menu_search">Search</string>
    <string name="home_menu_settings">Settings</string>
    <string name="home_menu_shuffle">Shuffle all</string>
    <string name="home_menu_refresh">Refresh</string>
    <string name="category_home">Home</string>
    <string name="home_search_hint">Search your music</string>
    <string name="home_online_search">Search online</string>
    <string name="home_online_search_subtitle">Find and stream millions of songs</string>
    <string name="online_search_hint">Search songs online</string>
    <string name="online_search_empty">No results found. Try a different keyword.</string>
    <string name="online_search_error">Something went wrong. Please try again.</string>
    <string name="turn_off_vpn_proxy">You must turn off the VPN or Proxy for the app to work properly.</string>
    <string name="online_download">Download</string>
    <string name="online_download_started">Download started</string>
    <string name="online_loading">Loading…</string>
    <string name="downloading">Downloading</string>
    <string name="merging">Merging…</string>
    <string name="download_successfully">Downloaded</string>
    <string name="download_error">Download failed</string>
    <string name="no_space_left_on_device">No space left on device</string>
    <string name="no_internet">No internet connection</string>
    <string name="song_link_expired_download">Link expired, please try downloading again</string>
    <string name="song_link_expired_play">Link expired, please try playing again</string>
    <string name="downloads_title">Downloads</string>
    <string name="downloads_empty">No downloaded songs yet</string>
    <string name="copyright_restrictions_title">Copyright restricted</string>
    <string name="copyright_restrictions_message">This song can\'t be downloaded due to copyright restrictions.</string>
    <string name="home_songs_count">%1$d songs</string>
    <string name="home_downloaded">Downloaded</string>
    <string name="home_sleep_timer">Sleep timer</string>
    <string name="home_on">On</string>
    <string name="home_off">Off</string>
    <string name="home_minutes">%1$d minutes</string>
    <string name="home_end_of_song">End of current song</string>
    <string name="home_rate_app">Rate app</string>
    <string name="home_rate_app_subtitle">Like this app?</string>
    <string name="home_settings">Settings</string>
    <string name="home_settings_subtitle">Support us</string>
    <string name="category_songs">Songs</string>
    <string name="category_albums">Albums</string>
    <string name="category_artists">Artists</string>
    <string name="category_genres">Genres</string>
    <string name="category_playlists">Playlists</string>
    <string name="unknown_artist">Unknown artist</string>
    <string name="category_dates">Dates</string>
    <plurals name="songs">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>
    <plurals name="albums">
        <item quantity="one">%d Album</item>
        <item quantity="other">%d Albums</item>
    </plurals>
    <plurals name="artists">
        <item quantity="one">%d Artist</item>
        <item quantity="other">%d Artists</item>
    </plurals>
    <plurals name="items">
        <item quantity="one">%d Item</item>
        <item quantity="other">%d Items</item>
    </plurals>
    <plurals name="folders_plural">
        <item quantity="one">%d Folder</item>
        <item quantity="other">%d Folders</item>
    </plurals>
    <string name="follow_system">Follow system</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="sort_by_size">Size</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_artist">Artist</string>
    <string name="sort_by_album">Album</string>
    <string name="sort_by_album_artist">Album artist -> title</string>
    <string name="dismiss">Dismiss</string>
    <string name="unknown_genre">Unknown genre</string>
    <string name="unknown_year">Unknown year</string>
    <string name="refreshed_songs">Refreshed %1$d songs</string>
    <string name="search">Search</string>
    <string name="search_query">Search: %s</string>
    <string name="share">Share</string>
    <string name="settings_app_name">App name</string>
    <string name="play_next">Play next</string>
    <string name="go_to_album">Go to album</string>
    <string name="go_to_artist">Go to artist</string>
    <string name="details">Details</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="unknown_playlist">Unknown playlist</string>
    <string name="gramophone_crashed" translatable="false">Crash log</string>
    <string name="crash_gramophone_version" translatable="false">Gramophone version</string>
    <string name="crash_phone_model" translatable="false">Model</string>
    <string name="crash_phone_brand" translatable="false">Brand</string>
    <string name="crash_sdk_level" translatable="false">SDK Level</string>
    <string name="crash_time" translatable="false">Time</string>
    <string name="crash_rtype" translatable="false">Release type</string>
    <string name="settings_category_appearance">Appearance</string>
    <string name="album_artist">Album artist</string>
    <string name="unknown_version">Unknown version</string>
    <string name="settings_version">Version</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_artist">Artist</string>
    <string name="settings_category_behavior">Behavior</string>
    <string name="settings_mediastore_filter">Song minimum length (seconds)</string>
    <string name="dialog_album">Album</string>
    <string name="dialog_genre">Genre</string>
    <string name="dialog_album_artist">Album artist</string>
    <string name="dialog_track_number">Track number</string>
    <string name="dialog_year">Year</string>
    <string name="dialog_path">Path</string>
    <string name="unknown_album">Unknown album</string>
    <string name="recently_added">Recently added</string>
    <string name="folders">Folders</string>
    <string name="settings_app_theme">App theme</string>
    <string name="natural_order">Natural order</string>
    <string name="grid">Grid</string>
    <string name="list">List</string>
    <string name="layout">Display</string>
    <string name="home_menu_equalizer">Equalizer</string>
    <string name="equalizer_not_found">Equalizer not found!</string>
    <string name="compact_list">List (compact)</string>
    <string name="check_for_updates">Check our channel for updates!</string>
    <string name="settings_default_progress_bar">Default progress bar</string>
    <string name="settings_default_progress_bar_summary">Enable material styled progress bar</string>
    <string name="opensource_info">Open-sourced under GPL-3.0\nCopyright %s</string>
    <string name="playlist_favourite">Favourites</string>
    <string name="now_playing">Now playing</string>
    <string name="settings_content_based_color_summary">Enable album based color generation</string>
    <string name="settings_content_based_color">Content based colors</string>
    <string name="settings_package_type">Package type</string>
    <string name="no_lyric_found">No lyric found</string>
    <string name="dialog_disc_number">Disc number</string>
    <string name="unknown_title">Unknown title</string>
    <string name="filesystem">Filesystem</string>
    <string name="dialog_mime">MIME type</string>
    <string name="dialog_duration">Duration</string>
    <string name="settings_title_center">Centered title</string>
    <string name="settings_title_center_summary">Use centered title for full player</string>
    <string name="settings_player_ui">Player UI</string>
    <string name="settings_player_ui_summary">Full player UI, lyrics</string>
    <string name="settings_appearance_summary">Application appearance, theme modes</string>
    <string name="settings_about_app">About</string>
    <string name="settings_about_gramophone">About application</string>
    <string name="settings_behavior_summary">Filters, launch behaviors</string>
    <string name="settings_category_links">Links</string>
    <string name="settings_library">Library</string>
    <string name="settings_library_summary">Manage media library</string>
    <string name="settings_player_options">Audio</string>
    <string name="settings_player_options_summary">Output quality, playback behavior</string>
    <string name="settings_customization">Customization</string>
    <string name="settings_customization_summary">Manage customization options</string>
    <string name="settings_album_round_corner">Album round corner</string>
    <string name="settings_title_bold">Bold title</string>
    <string name="settings_title_bold_summary">Use bold title for full player</string>
    <string name="settings_experimental_settings">Experimental</string>
    <string name="settings_experimental_settings_summary">Testing features, misc</string>
    <string name="settings_color_accuracy_summary">Make color generation accurate</string>
    <string name="settings_color_accuracy">Color accuracy</string>
    <string name="sort_by_add_date">Add date</string>
    <string name="sort_by_modified_date">Modified date</string>
    <string name="settings_lyric">Lyric</string>
    <string name="settings_lyrics_configuration">Lyrics configuration</string>
    <string name="back">Back</string>
    <string name="play_all">Play all</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="sort">Sort</string>
    <string name="scroll_to_albums">Scroll to albums</string>
    <string name="scroll_to_songs">Scroll to songs</string>
    <string name="what_were_you_doing">What were you doing in Gramophone when this crash happened? Please add as many details as possible to increase the chances of me being able to fix the problem.\n\nPlease note that English is preferred for bug reports, but I will try to use machine translation if you send bug reports in another language.</string>
    <string name="enter_msg_for_dev_here">Enter message for developer here</string>
    <string name="log_attachment">Logs will be sent as attachment automatically</string>
    <string name="create_playlist">Create playlist…</string>
    <string name="exit_app">Exit app</string>
    <string name="are_you_sure_you_want_to_exit_app">Are you sure you want to exit app?</string>
    <string name="exit">Exit</string>
    <string name="action_cancel">Cancel</string>
    <string name="feedback_amp_help"><![CDATA[Feedback & Help]]></string>
    <string name="tell_us_the_problem_you_encountered">Tell us the problem you encountered</string>
    <string name="some_songs_are_not_displayed">Some songs are not displayed</string>
    <string name="bugs">Bugs</string>
    <string name="too_many_ads">Too many ads</string>
    <string name="music_stop_playing">Music stop playing</string>
    <string name="suggestion">Suggestion</string>
    <string name="others">Others</string>
    <string name="submit">Submit</string>
    <string name="please_tell_us_more_details">Please tell us more details so that we can locate and solve your problem faster (at least 6 characters)</string>
    <string name="thank_for_your_feedback">Thank you for your feedback!</string>
    <string name="we_will_try_our_best_to_improve_it">We will try our best to improve it</string>
    <string name="ok">OK</string>
</resources>