<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/category_home" />
    <item
        android:id="@id/songs"
        android:icon="@drawable/ic_nav_songs"
        android:title="@string/category_songs" />
    <item
        android:id="@id/albums"
        android:icon="@drawable/ic_nav_albums"
        android:title="@string/category_albums" />
    <item
        android:id="@id/artists"
        android:icon="@drawable/ic_nav_artists"
        android:title="@string/category_artists" />
    <item
        android:id="@id/playlists"
        android:icon="@drawable/ic_nav_playlists"
        android:title="@string/category_playlists" />
</menu>
